<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- This layout defines the main screen and will display the list of weather or an error -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
      - This RecyclerView will be responsible for displaying our list of weather data. All of  -
      - its layout attributes should make sense to you, perhaps except for                     -
      - android:clipToPadding="false". When we set clipToPadding to false, we are telling      -
      - RecyclerView to not resize the over-scrolling effect that happens when you attempt to  -
      - scroll past the end of the content.                                                    -
      -                                                                                        -
      - Go ahead and test it out yourself. Set clipToPadding to "true" and scroll to the very  -
      - bottom of the list. Then, keep scrolling. You'll see the "glow" that happens. That is  -
      - called an EdgeEffect in Android. The problem when clipToPadding is set to "true" is    -
      - that there is a gap between the bottom of the screen and the EdgeEffect. Set           -
      - clipToPadding to "false" again and observe how the gap is gone.                        -
      - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/navigation_action" android:layout_height="wrap_content" android:layout_width="match_parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="8dp" />


        <!-- A progress bar that will be shown to users to indicate that weather data is loading -->
        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header">

        <TextView
            android:id="@+id/navigation_body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_body_empty"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="105dp"
            android:id="@+id/navigation_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/navigation_drawer_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="30dp"
            android:src="@drawable/ic_add_circle_outline_white_24dp" />

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
